--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,54 @@
+alembic==1.14.0
 Backtesting==0.3.3
-bokeh==3.6.0
-contourpy==1.3.0
+beautifulsoup4==4.12.3
+bokeh==3.6.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+colorama==0.4.6
+colorlog==6.9.0
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.55.2
+frozendict==2.4.6
+greenlet==3.1.1
+html5lib==1.1
+idna==3.10
+investpy==1.0.8
 Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.7
+lxml==5.3.0
+Mako==1.3.7
 MarkupSafe==3.0.2
-numpy==2.1.2
-packaging==24.1
+matplotlib==3.9.3
+multitasking==0.0.11
+numpy==2.1.3
+optuna==4.1.0
+packaging==24.2
 pandas==2.2.3
+peewee==3.17.8
 pillow==11.0.0
+platformdirs==4.3.6
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
-six==1.16.0
-tornado==6.4.1
+requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+six==1.17.0
+soupsieve==2.6
+SQLAlchemy==2.0.36
+ta==0.11.0
+threadpoolctl==3.5.0
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
 tzdata==2024.2
+Unidecode==1.3.8
+urllib3==2.2.3
+webencodings==0.5.1
 xyzservices==2024.9.0
-optuna==4.0.0
+yfinance==0.2.50
